--- a/demo01.html
+++ b/demo01.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>git测试</title>
 </head>
 <body>
 	<script>
@@ -30,6 +30,8 @@
 			configurable:true
 		})
 
+		console.log(obj)
+		obj.color = "pink";
 		console.log(obj)
 		obj.color = "pink";
 		console.log(obj)
